css/layout.css
/* COMMON LAYOUT STYLES !! */
.main_container {
    width: 30em;
}

.default_link {
    color: black;
    text-decoration: none;
}

a {
    color: black;
    text-decoration: none;
    font-family: Muli, serif
}

.header__secondary__left_container a:hover, span a:hover, .header__secondary__widget a:hover {
    color: #167183;
}

.block__link {
    display: block;
    width: 100%;
    height: 100%;
    font-size: 10px;
    font-weight: bold;
}

.center__div {
    margin: 0 auto;
}

.theme__size_container {
    width: 94.211576%; /* 944 */
}

h1 {
    font-size: 25px;
}

/* END COMMON LAYOUT STYLES !! */

/* HEADER LAYOUT STYLES */

.header__main {
    background-color: #7dd9e8;

    padding-bottom: 27px;
    padding-top: 18px;

    width: 100%;
    height: 40px;
}

.header__logo {
    /*background-color: black;*/

    float: left;
    margin-right: 12px;

    /*width: 224px;*/
    height: 38px;
}

.header__search_box__container {
    display: none;
}

.search_hidden_container {
    display: block;
    float: left;
    margin-top: 17px;
    margin-left: 12px;
}

.search_hidden_container:hover .header__search_box__container {
    display: block;
}

.header__search_box {
    /*background-color: darkred;*/

    float: left;
    margin-top: 17px;
    margin-left: 12px;
    margin-right: 3px;

    width: 275px;
    height: 21px;
}


.search_box__left {
    /*background-color: black;*/
    background-image: url("../images/header/main/SearchBxLeftCircular.png");
    width: 7px;
    height: 20px;
    background-repeat: no-repeat;
    float: left;
}

.search_box__right_container {
    float: left;
    width: 268px;
}

.search_box {
    float: left;
    width: 231px;
}

.search_box__right {
    background-image: url("../images/header/main/SearchBoxRightCircular.png");
    width: 7px;
    height: 20px;
    float: left;
}

.search_box__input {
    background-color: #caeff7;

    outline: none;
    border: none;
    height: 20px;
    width: 231px;

    font-size: 11px;
}

.search_box__input:hover {
    background-color: #cdf2fa;
}

.search_box__btn_right__wrapper {
    float: left;
    width: 37px;
}

.search_box__btn_group {
    float: left;
    width: 30px;
}


.search_box__X_btn {
    background-image: url("../images/header/main/XIcon.png");
    float: left;
    width: 15px;
    height: 20px;
}

.search_box__Search_btn {
    background-image: url("../images/header/main/SearchIcon.png");
    margin-left: 1px;
    float: left;
    width: 14px;
    height: 20px;
}

.header__search_button {
    /*background-color: #274d56;*/

    float: left;
    margin-top: 18px;
    margin-left: 4px;

    width: 53px;
    height: 20px;
}

.search_button__left {
    background-image: url("../images/header/main/SearchBtnLeft.png");
    float: left;
    width: 8px;
    height: 20px;
}

.search_button__right_container {
    float: left;
    width: 45px;
}

.search_button__container {
    float: left;
    width: 38px;
    height: 20px;
}


.search_button {
    width: 38px;
    height: 20px;
    outline: none;
    border: none;
    background-color: #274d56;
    color: #c9d5d5;
    font-size: 9px;
    float: left;
}

.search_button:hover {
    color: #b6bebe;
}

.search_button__right {
    background-image: url("../images/header/main/SearchBtnRight.png");

    float: left;
    width: 7px;
    height: 20px;
}

.header__right_container {
    float: right;
}

.header__user_full_name {
    text-align: right;
    font-weight: bold;
}

.header__user_account_options {

}

.header__user_account_options a {
    color: black;
    text-decoration: none;
    font-size: 10px;
    font-weight: bold;
}


.header__secondary {
    background-color: #F5F5F5;

    width: 100%;
    height: 11px;

    padding-bottom: 14px;
    padding-top: 14px;
}

.header__secondary a {
    color: black;
    text-decoration: none;

    padding-left: 5px;
    padding-right: 10px;

    font-size: 14px;
}

.header__secondary__left_container {
    float: left;
}


.header__secondary__left_container a {
    font-size: 12px;
    font-weight: bold;
}

.friend_requests_container {
    font-size: 12px;
}

.notification {
    font-size: 5px;
    font-weight: bold;
}

.header__secondary__widget {
    float: right;
    margin-left: 31px;
}

.friend_req_icon {
    background-image: url("../images/header/secondary/FriendReqIcon.png");
    background-repeat: no-repeat;
}

.friend_req_icon:hover {
    background-image: url("../images/header/secondary/FriendReqBtnActive.png");
}

.header__secondary__widget a {
    text-decoration: none;
    padding: 0;
}

.header__secondary__widget span {
    font-size: 14px;
}

.header__secondary_widget__icon {
    background-color: #000000;
}

.topic_boxes_invite_container {
    font-weight: bold;
}

.friend_requests_container {
    margin-left: 25px;
}


/* END HEADER LAYOUT STYLES */


/* START BODY LAYOUT STYLES */

.body {
    margin-top: 31px;
    margin-bottom: 32px;

    display: flex;
    flex-direction: column;
}


.body__left_container {
    background-color: #F5F5F5;
}

.recent_search_icon__container {
    float: right;
    margin-left: 10px;
}

.body__column_title {
    background-color: #2FC1DA;
    color: white;

    font-size: 16px;
    font-weight: bold;

    height: 15px;

    padding-left: 12px;
    padding-bottom: 14px;
    padding-top: 15px;
    font-family: Muli, serif;
}

.search_results__container {
    margin-top: 4px;
    margin-bottom: 6px;
}

.search_results_second__container {
    margin-top: 1px;
    margin-bottom: 1px;
}

.body__column__recent_search_value_container {
    background-color: #F5F5F5;

    font-size: 12px;
    font-weight: bold;

    padding: 11px 12px;
}

.body__column__recent_search_value_container:hover {
    background-color: #ffffff;
}

.body__left_container a {
    text-decoration: none;
    color: #000000;
}

.search_results__container a {
    text-decoration: none;
    color: #000000;
}


.body__column__recent_search__active {
    background-color: #FFFFFF;
}
/* ... */

